# jubilant-tribble

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
kidage/: __main__.py  render.py
tests/: test_age.py  test_config.py  test_display.py  test_main.py  test_render.py  test_solar.py  test_special.py
