[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kidage"
version = "0.1.0"
description = "Tracks how old a kiddo is on a Waveshare 2.13\" b/r e-paper display."
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
pi = [
    "RPi.GPIO>=0.7",
    "spidev>=3.6",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-Pillow",
    "types-python-dateutil",
]

[project.scripts]
kidage = "kidage.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kidage*", "vendor*"]

[tool.setuptools.package-data]
kidage = ["py.typed", "fonts/Fredoka.ttf", "fonts/OFL.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["kidage"]
# Vendored Waveshare driver is verbatim third-party code — not ours to cover.
omit = ["vendor/*"]

[tool.coverage.report]
# `if __name__ == "__main__"` is the entrypoint shim, never reached under pytest.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["kidage"]

# The vendored Waveshare driver is verbatim third-party code; don't typecheck it
# or chase its untyped RPi.GPIO/spidev imports. kidage/display.py imports it
# lazily inside show().
[[tool.mypy.overrides]]
module = "vendor.*"
follow_imports = "skip"
ignore_missing_imports = true
